--- a/src/components/views/Post/Post.module.scss
+++ b/src/components/views/Post/Post.module.scss
@@ -1,12 +1,13 @@
 @import '../../../styles/settings.scss';
-
-
 .widthCard {
      padding: 2%;
      width: 80%;
-    
   }
-
 .fonttitle {
+   font-size: 18;
+   font-weight: bold;
+}
+.subtitle {
    font-size: 14;
+   
 }
