--- a/src/components/features/PostBoard/PostBoard.module.scss
+++ b/src/components/features/PostBoard/PostBoard.module.scss
@@ -2,54 +2,33 @@
 
 .root {
   width: 100%;
-}
-
-div.active {
-  display: flex;
-}
-
-.activeButton {
-  display: flex;
-}
-
-.widthCard {
-  width: 80%;
-}
+ }
 
 .postsGrid {
   display: flex;
-  flex-wrap: wrap;
-  // flex-direction: column-reverse;
-  flex-direction: row-reverse;
-  gap: 12px;
-  height: 80vh;
+  flex-wrap: nowrap;
+  flex-direction: column-reverse;
+  //flex-direction: column;
+  
+  height: 100%;
+
+/*  gap: 12px;
+  height:80vh;*/
 }
 
-.post {
-  border: 2px solid black;
-  height: 350px;
+.widthCard {
+  flex: 1 1 70px;
+  margin-top: 10px;
+  height: 50px;
+}
+
+.links {
   text-decoration: none;
-  color: black;
-  &:hover,
-  &.active {
-    color: black;
-    text-decoration: none;
-  }
-  .postTitle {
-    width: 100%;
-    border-bottom: solid 2px    
-  }
+  color:midnightblue;
 }
-.addPostButton {
-  position: absolute;
-  z-index: 5;
-  display: none;
-}
-.addPostButtonHidden {
-  @extend .addPostButton;
-  display: none;
-}
-// .addPostButton
+.links:hover { color: blue }
+
+
 @media only screen and (max-width: 992px) {
   .postsGrid {
     overflow: scroll;
