--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -1,4 +1,43 @@
 @import '../../../styles/settings.scss';
 
-// .root {
-// }
+.root {
+    width: 100%;
+
+img {
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    margin-top: 5px;
+    margin-left: 10px;
+    
+}
+nav {
+    width: 100%;
+    height: 100%;
+}
+.divMain{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+
+}
+.divLeft{
+     flex: 1 1 70%;
+     margin-top: 3px;
+}
+.divCenter{
+    flex: 1 1 15%;
+
+}
+.divRigth{
+     flex: 1 1 15%;
+ }
+.textNowrap{
+    margin-top: 10px;
+    text-align: right;
+}
+.link{
+    color: white;
+    font-size: 14px;
+}
+}
