--- a/src/components/views/Homepage/Homepage.module.scss
+++ b/src/components/views/Homepage/Homepage.module.scss
@@ -1,10 +1,11 @@
 @import '../../../styles/settings.scss';
 
  .root {
-    align-items: center;
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 90vh;
+    align-content: flex-start;
+    
     width: 90%;
  }
